fix(DiscoveryConfig): Change config for eureka discovery

--- a/userdetails/src/main/resources/application.properties
+++ b/userdetails/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.database= POSTGRESQL
 
 jwt.secret=supersecret
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9000
+eureka.client.service-url.default-zone=http://localhost:8761
