--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=service-registry
-server.port=9000
-eureka.client.registerWithEureka = false
-eureka.client.fetchRegistry = false
+server.port=8761
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
