--- a/userdata/src/main/resources/application.properties
+++ b/userdata/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=userdata
+server.port=8081
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9000
+
+eureka.client.service-url.default-zone=http://localhost:8761
