--- a/worker/src/main/resources/application.properties
+++ b/worker/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8766
+server.port=8082
 spring.application.name=worker
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9000
+eureka.client.service-url.default-zone=http://localhost:8761
