--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -14,11 +14,13 @@ server:
 
 eureka:
     client:
-        serviceUrl:
-            defaultZone: "http://localhost:9000"
-
+        service-url:
+            default-zone: "http://localhost:8761"
 jwt:
     secret: supersecret
+
+authentication:
+    enabled: true
 
 spring:
     application:
@@ -29,7 +31,7 @@ spring:
                 - id: userdetails
                   predicates:
                     - Path=/userdetails/
-                  uri: localhost:8080
+                  uri: "http://localhost:8080"
             globalcors:
                 corsConfigurations:
                     '[/**]':
