feat(Userdata): Add Database configuration

--- a/userdata/src/main/resources/application.properties
+++ b/userdata/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=userdata
 server.port=8081
 
+spring.datasource.url= jdbc:postgresql://localhost:5432/userdata
+spring.datasource.username: postgres
+spring.datasource.password: demo1234
+spring.datasource.driver-class-name: org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql= true
+spring.jpa.database= POSTGRESQL
 
 eureka.client.service-url.default-zone=http://localhost:8761
