fix(API-Gateway): Uncomment local properties for docker preparation

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 spring.application.name=api-gateway
 
-server.port=8765
+# Uncomment to use this service local instead of in a docker container. (Local Development)
+# server.port=8765
+# authentication.enabled=true
+# jwt.secret=MTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI=
 
-eureka.client.service-url.default-zone= "http://localhost:8761"
-
-jwt.secret=supersecret
-
-authentication.enabled=false
-
-# spring.cloud.gateway.routes[0].id=userdetails_service
-# spring.cloud.gateway.routes[0].uri=http://localhost:8080
-# spring.cloud.gateway.routes[0].predicates[0]=Path=/register/**
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# eureka.instance.prefer-ip-address=true
