--- a/service-registry/src/main/resources/application.properties
+++ b/service-registry/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=service-registry
-server.port=8761
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+# Uncomment to use this service local instead of in a docker container. (Local Development)
+# server.port=8761
+
+# eureka.client.register-with-eureka=false
+# eureka.client.fetch-registry=false
