--- a/userdetails/src/main/resources/application.properties
+++ b/userdetails/src/main/resources/application.properties
@@ -1,16 +1,21 @@
 spring.application.name=userdetails
 
-server.port: 8080
+# Uncomment to use this service local instead of in a docker container. (Local Development)
+# server.port=8082
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/users
-spring.datasource.username: postgres
-spring.datasource.password: demo1234
-spring.datasource.driver-class-name: org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5431/users
+# spring.datasource.username=postgres
+# spring.datasource.password=demo1234
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql= true
-spring.jpa.database= POSTGRESQL
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.database=POSTGRESQL
 
-jwt.secret=supersecret
+# jwt.secret=MTIzNDU2Nzg5MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTI=
+# jwt.lifetime=3600
+# jwt.refreshLifetime=2592000
 
-eureka.client.service-url.default-zone=http://localhost:8761
+# eureka.instance.hostname=localhost
+# eureka.instance.prefer-ip-address=false
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
