--- a/userdata/src/main/resources/application.properties
+++ b/userdata/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 spring.application.name=userdata
-server.port=8081
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/userdata
-spring.datasource.username: postgres
-spring.datasource.password: demo1234
-spring.datasource.driver-class-name: org.postgresql.Driver
+# Uncomment to use this service local instead of in a docker container. (Local Development)
+# server.port=8081
+# spring.datasource.url=jdbc:postgresql://localhost:5432/userdata
+# spring.datasource.username=postgres
+# spring.datasource.password=demo1234
+# spring.jpa.hibernate.ddl-auto=update
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# eureka.instance.prefer-ip-address=true
 
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql= true
-spring.jpa.database= POSTGRESQL
-
-eureka.client.service-url.default-zone=http://localhost:8761
+# spring.kafka.bootstrap-servers=localhost:29092
+# spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+# spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+# spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+# spring.kafka.consumer.properties.spring.json.trusted.packages=*
