--- a/worker/src/main/resources/application.properties
+++ b/worker/src/main/resources/application.properties
@@ -1,4 +1,18 @@
-server.port=8082
 spring.application.name=worker
 
-eureka.client.service-url.default-zone=http://localhost:8761
+# Uncomment to use this service local instead of in a docker container. (Local Development)
+# server.port: 8083
+# spring.mail.host=smtp.mail.ru
+# spring.mail.username=ewald95@mail.ru
+# spring.mail.password=heiohofyBlZqEyEAnter
+# spring.mail.port=465
+# spring.mail.protocol=smtp
+
+# spring.mail.properties.mail.debug=true
+
+# spring.kafka.bootstrap-servers=localhost:29092
+# spring.kafka.consumer.group-id=worker-group
+# spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+# spring.kafka.consumer.properties.spring.json.type.mapping=dev.ewald.userdata.model.NotificationWorkerRequest:dev.ewald.worker.dto.WorkRequest
+# spring.kafka.consumer.properties.spring.json.trusted.packages=*
