--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.13.5",
     "frontend": "file:",
     "gsap": "^3.12.7",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "^19.0.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6"
